Updated the README with the write up

--- a/COVID_vaccine.ipynb
+++ b/COVID_vaccine.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
        "4                              NaN              NaN  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
        "4       RA  COVID19 (COVID19 (PFIZER-BIONTECH))  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +509,7 @@
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +845,7 @@
        "917122    Crohns disease, diabetes, high blood pressure,...  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -950,57 +950,8 @@
        "      <td>IM</td>\n",
        "      <td>COVID19 (COVID19 (PFIZER-BIONTECH))</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1024788</th>\n",
-       "      <td>COVID19</td>\n",
-       "      <td>MODERNA</td>\n",
-       "      <td>2</td>\n",
-       "      <td>IM</td>\n",
-       "      <td>COVID19 (COVID19 (MODERNA))</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1024790</th>\n",
-       "      <td>COVID19</td>\n",
-       "      <td>MODERNA</td>\n",
-       "      <td>2</td>\n",
-       "      <td>IM</td>\n",
-       "      <td>COVID19 (COVID19 (MODERNA))</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1024795</th>\n",
-       "      <td>COVID19</td>\n",
-       "      <td>MODERNA</td>\n",
-       "      <td>2</td>\n",
-       "      <td>IM</td>\n",
-       "      <td>COVID19 (COVID19 (MODERNA))</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1024817</th>\n",
-       "      <td>COVID19</td>\n",
-       "      <td>PFIZER\\BIONTECH</td>\n",
-       "      <td>1</td>\n",
-       "      <td>IM</td>\n",
-       "      <td>COVID19 (COVID19 (PFIZER-BIONTECH))</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1024853</th>\n",
-       "      <td>COVID19</td>\n",
-       "      <td>MODERNA</td>\n",
-       "      <td>UNK</td>\n",
-       "      <td>SYR</td>\n",
-       "      <td>COVID19 (COVID19 (MODERNA))</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5351 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1011,12 +962,6 @@
        "916741    COVID19  PFIZER\\BIONTECH               1       SYR   \n",
        "916772    COVID19  PFIZER\\BIONTECH             UNK        IM   \n",
        "916790    COVID19  PFIZER\\BIONTECH               1        IM   \n",
-       "...           ...              ...             ...       ...   \n",
-       "1024788   COVID19          MODERNA               2        IM   \n",
-       "1024790   COVID19          MODERNA               2        IM   \n",
-       "1024795   COVID19          MODERNA               2        IM   \n",
-       "1024817   COVID19  PFIZER\\BIONTECH               1        IM   \n",
-       "1024853   COVID19          MODERNA             UNK       SYR   \n",
        "\n",
        "                                     vax_name  \n",
        "vaers_id                                       \n",
@@ -1024,18 +969,10 @@
        "916720            COVID19 (COVID19 (MODERNA))  \n",
        "916741    COVID19 (COVID19 (PFIZER-BIONTECH))  \n",
        "916772    COVID19 (COVID19 (PFIZER-BIONTECH))  \n",
-       "916790    COVID19 (COVID19 (PFIZER-BIONTECH))  \n",
-       "...                                       ...  \n",
-       "1024788           COVID19 (COVID19 (MODERNA))  \n",
-       "1024790           COVID19 (COVID19 (MODERNA))  \n",
-       "1024795           COVID19 (COVID19 (MODERNA))  \n",
-       "1024817   COVID19 (COVID19 (PFIZER-BIONTECH))  \n",
-       "1024853           COVID19 (COVID19 (MODERNA))  \n",
-       "\n",
-       "[5351 rows x 5 columns]"
+       "916790    COVID19 (COVID19 (PFIZER-BIONTECH))  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1052,13 +989,14 @@
     "vaccine_type_transformed.drop_duplicates(\"vaers_id\", inplace=True)\n",
     "vaccine_type_transformed.set_index(\"vaers_id\", inplace=True)\n",
     "\n",
-    "vaccine_type_transformed.head()\n",
-    "vaccine_type_transformed"
+    "#Filtered out the vax_types that weren't COVID19\n",
+    "vaccine_type_transformed=vaccine_type_transformed[vaccine_type_transformed['vax_type'] == 'COVID19']\n",
+    "vaccine_type_transformed.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1238,7 +1176,7 @@
        "[5351 rows x 6 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1260,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1359,7 +1297,7 @@
        "[18812 rows x 1 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1379,19 +1317,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Created connection to the PosgreSQL DataBase\n",
     "connection_string = \"postgres:postgras@localhost:5432/ETL_Project\"\n",
+    "#Instead of having manualling entering pw, linked pw and db name to another file\n",
     "#connection_string = f\"postgres:{sql_pass}@localhost:5432/{sql_db}\"\n",
     "engine = create_engine(f'postgresql://{connection_string}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1400,7 +1339,7 @@
        "['vaccine_type', 'all_symp', 'vaccine_data']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1412,7 +1351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1422,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1432,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
