Updated the README with the write up

--- a/COVID_vaccine.ipynb
+++ b/COVID_vaccine.ipynb
@@ -1356,7 +1356,7 @@
    "outputs": [],
    "source": [
     "#Reading the all_symp DataFrame into all_symp table\n",
-    "all_symp.to_sql(name='all_symp', con=engine, if_exists='append', index=True)"
+    "all_symp.to_sql(name='all_symp', con=engine, if_exists='replace', index=True)"
    ]
   },
   {
@@ -1366,7 +1366,7 @@
    "outputs": [],
    "source": [
     "#Reading the vaccine_type_transformed DataFrame into vaccine_type table\n",
-    "vaccine_type_transformed.to_sql(name='vaccine_type', con=engine, if_exists='append', index=True)"
+    "vaccine_type_transformed.to_sql(name='vaccine_type', con=engine, if_exists='replace', index=True)"
    ]
   },
   {
@@ -1376,7 +1376,7 @@
    "outputs": [],
    "source": [
     "#Reading the vaccine_data_transformed DataFrame into vaccine_data table\n",
-    "vaccine_data_transformed.to_sql(name='vaccine_data', con=engine, if_exists='append', index=True)"
+    "vaccine_data_transformed.to_sql(name='vaccine_data', con=engine, if_exists='replace', index=True)"
    ]
   },
   {
