Removed personal posgres username and password

--- a/COVID_vaccine.ipynb
+++ b/COVID_vaccine.ipynb
@@ -1322,9 +1322,8 @@
    "outputs": [],
    "source": [
     "#Created connection to the PosgreSQL DataBase\n",
-    "connection_string = \"postgres:postgras@localhost:5432/ETL_Project\"\n",
     "#Instead of having manualling entering pw, linked pw and db name to another file\n",
-    "#connection_string = f\"postgres:{sql_pass}@localhost:5432/{sql_db}\"\n",
+    "connection_string = f\"postgres:{sql_pass}@localhost:5432/{sql_db}\"\n",
     "engine = create_engine(f'postgresql://{connection_string}')"
    ]
   },
